@@ -1,6 +1,12 @@
 # ChangeLog for app-office/taxbird
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/taxbird/ChangeLog,v 1.21 2009/10/18 14:31:19 hanno Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/taxbird/ChangeLog,v 1.22 2010/02/04 18:44:40 hanno Exp $
+
+*taxbird-0.15 (04 Feb 2010)
+
+  04 Feb 2010; Hanno Boeck <hanno@gentoo.org> +taxbird-0.15.ebuild:
+  Version bump, openssl dependency was wrong and discouraged flag in guile
+  is unneeded as it's implied by deprecated-flag.
 
 *taxbird-0.14 (18 Oct 2009)
 
